--- a/src/style.css
+++ b/src/style.css
@@ -188,3 +188,49 @@ header {
     }
   }
 }
+
+.about {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+  h1 {
+    text-align: center;
+    padding: 1rem;
+  }
+
+  .card {
+    background-color: #ffdb58;
+    text-align: center;
+    text-transform: capitalize;
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
+    padding: 2rem 3.5rem;
+    border-radius: 2rem;
+    font-weight: 500;
+    font-style: italic;
+
+    .social-media {
+      display: flex;
+      justify-content: center;
+      gap: 1.5rem;
+      background-color: #ffa7a7;
+      border-radius: 2rem;
+      padding: 1rem;
+      width: 35rem;
+
+      .facebook {
+        img {
+          width: 2rem;
+        }
+      }
+
+      .instagram {
+        img {
+          width: 2rem;
+        }
+      }
+    }
+  }
+}
